--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -1,6 +1,9 @@
+<!--search actionが動いた時のみ-->
+<% if params[:action] == 'search' %> 
 <div class="results-block">
   <%= bootstrap_flash %>
 </div>
+<% end %>
 <% if @stock %>    
   <div class="well results-block">
     <strong>Symbol: </strong> <%= @stock.ticker %>
